# vertex

./: .dockerignore  .gitignore  AGENTS.md  BEE_PROTOCOL_IMPROVEMENTS.md  CHANGELOG.md  CLA.md  CLI_ARCHITECTURE.md  Cargo.toml  DIFFERENCES.md  Dockerfile  MIGRATION_PLAN.md  README.md  RELEASING.md  SECURITY_ANALYSIS.md  THREAT_MODEL.md  build.sh  cliff.toml  deny.toml  dist-workspace.toml  flake.nix  inflight-sweep-harness.mjs  iter19-grid.sh  justfile  leaf-probe.mjs  release.toml  shard-range-harness.mjs  shard-window-harness.mjs
crates/chain/: Cargo.toml
crates/chain/api/: Cargo.toml
crates/chain/api/src/: chequebook.rs  config.rs  disabled.rs  error.rs  lib.rs  reader.rs  sender.rs  tests.rs  tx.rs
crates/chain/index/: Cargo.toml
crates/chain/index-chequebook-factory/: Cargo.toml
crates/chain/index-chequebook-factory/src/: indexer.rs  lib.rs  projection.rs  tests.rs
crates/chain/index-chequebook-factory/tests/: e2e_fork.rs
crates/chain/index-contracts/: Cargo.toml
crates/chain/index-contracts/src/: indexer.rs  lib.rs  projection.rs  reducer.rs  registry.rs  store.rs  tests.rs
crates/chain/index-contracts/tests/: e2e_fork.rs
crates/chain/index-framework/: Cargo.toml
crates/chain/index-framework/src/: indexer.rs  lib.rs  projection.rs  reducer.rs  registration.rs  store.rs  tag.rs  tests.rs
crates/chain/index-postage/: Cargo.toml
crates/chain/index-postage/src/: events.rs  indexer.rs  lib.rs  projection.rs  tests.rs
crates/chain/index-postage/tests/: e2e_fork.rs
crates/chain/index-redistribution/: Cargo.toml
crates/chain/index-redistribution/src/: events.rs  indexer.rs  lib.rs  projection.rs  tests.rs
crates/chain/index-redistribution/tests/: e2e_fork.rs
crates/chain/index-staking/: Cargo.toml
crates/chain/index-staking/src/: indexer.rs  lib.rs  projection.rs  tests.rs
crates/chain/index-staking/tests/: e2e_fork.rs
crates/chain/index-swap-price/: Cargo.toml
crates/chain/index-swap-price/src/: indexer.rs  lib.rs  projection.rs  tests.rs
crates/chain/index-swap-price/tests/: e2e_fork.rs
crates/chain/index/src/: cursor.rs  engine.rs  error.rs  indexer.rs  lib.rs  metrics.rs  notify.rs  reader.rs  tests.rs
crates/chain/index/tests/: e2e_fork.rs
crates/chain/src/: build.rs  error.rs  lib.rs  provider.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/ffi/: AGENTS.md  Cargo.toml  build.rs  flutter_rust_bridge.yaml
crates/ffi/bindings/dart/: pubspec.yaml
crates/ffi/src/: error.rs  frb_generated.rs  lib.rs
crates/ffi/src/api/: client.rs  error.rs  logging.rs  metrics.rs  mod.rs  types.rs
crates/logging/: Cargo.toml
crates/metrics/: Cargo.toml
crates/metrics/metrics-derive/: Cargo.toml
crates/metrics/metrics-derive/src/: lib.rs
crates/metrics/metrics-derive/tests/: metrics.rs
crates/metrics/src/: buckets.rs  guards.rs  label_value.rs  labels.rs  lib.rs  prometheus.rs  protocol.rs  recorder.rs  server.rs
crates/metrics/src/common/: mpsc.rs
crates/network-primitives/: Cargo.toml
crates/network-primitives-traits/: Cargo.toml
crates/network-primitives-traits/src/: lib.rs
crates/network-primitives/src/: lib.rs  named.rs  swarm.rs
crates/node-api/: Cargo.toml
crates/node-api/src/: builder.rs  events.rs  exit.rs  lib.rs  tasks.rs
crates/node-core/: Cargo.toml  build.rs
crates/node-core/src/: dirs.rs  exit.rs  lib.rs  node_config.rs  utils.rs  version.rs
crates/node-core/src/args/: datadir_args.rs  log.rs  mod.rs  utils.rs
crates/node-core/src/cli/: config.rs
crates/node-core/src/metrics/: prometheus_exporter.rs  version_metrics.rs
crates/observability/: AGENTS.md  Cargo.toml
crates/observability/src/: config.rs  format.rs  guard.rs  guards.rs  label_value.rs  labels.rs  layers.rs  lib.rs  macros.rs  profiling.rs  tracer.rs
crates/observability/src/metrics/: buckets.rs  hooks.rs  mod.rs  process.rs  recorder.rs  server.rs  task.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: main.rs
crates/primitives/: Cargo.toml  build.rs
crates/primitives-traits/: Cargo.toml
crates/primitives-traits/src/: auth.rs  chunk.rs  lib.rs  stamp.rs
crates/primitives/benches/: primitives.rs  proofs.rs
crates/primitives/src/: chunk.rs  distaddr.rs  distance.rs  lib.rs  nodeaddr.rs  overlay.rs  proximity.rs  swarm.rs  validated.rs
crates/primitives/src/bmt/: .gitignore  chunk.rs  file.rs  mod.rs  pool.rs  proof.rs  reference.rs  tree.rs  zero_hashes.rs
crates/primitives/src/chunk/: bmt_body.rs  content.rs  error.rs  mod.rs  single_owner.rs
crates/primitives/src/manifest/: marshal.rs  mod.rs  node.rs  persist.rs  stringer.rs  walker.rs
crates/primitives/src/postage/: batch.rs  mod.rs  pat.rs  stamp.rs  tracker.rs
crates/storage/: AGENTS.md  Cargo.toml
crates/storage/indexeddb/: Cargo.toml
crates/storage/indexeddb/src/: lib.rs  persist.rs  store.rs
crates/storage/redb/: Cargo.toml
crates/storage/redb/src/: cursor.rs  lib.rs  metrics.rs  stats.rs  tx.rs
crates/storage/src/: codecs.rs  error.rs  lib.rs  table.rs  traits.rs
crates/swarm-api/: Cargo.toml
crates/swarm-api/src/: access.rs  availability.rs  bandwidth.rs  chunk.rs  config.rs  error.rs  lib.rs  network.rs  node.rs  protocol.rs  storage.rs  store.rs  swarm.rs  sync.rs  topology.rs  types.rs
crates/swarm-core/: Cargo.toml
crates/swarm-core/src/: factory.rs  incentivized.rs  info.rs  lib.rs
crates/swarm-forks/: Cargo.toml
crates/swarm-forks/src/: display.rs  forkcondition.rs  lib.rs
crates/swarm-forks/src/hardfork/: dev.rs  ethereum.rs  macros.rs  mod.rs  swarm.rs
crates/swarm-forks/src/hardforks/: ethereum.rs  mod.rs  swarm.rs
crates/swarmspec/: Cargo.toml
crates/swarmspec/src/: api.rs  constants.rs  contracts.rs  info.rs  lib.rs  lightclient.rs  spec.rs  storage.rs  token.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs  macros.rs  metrics.rs  shutdown.rs  task_handle.rs  time.rs
crates/tasks/src/time/: interval.rs  mod.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: layers.rs  lib.rs
crates/vertex-primitives/: Cargo.toml
crates/vertex-primitives/src/: error.rs  lib.rs
(+1161 files in other folders)
