[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["Nexum Contributors"]
license = "AGPL-3.0-or-later"
homepage = "https://nxm-rs.github.io/vertex"
repository = "https://nxm-rs.github.io/vertex"

[workspace]
members = [
    "bin/vertex",

    # Metrics & Observability
    # "crates/metrics",  # TODO: Update metrics API usage

    # Tasks
    "crates/tasks",

    # Network
    "crates/net/codec",
    "crates/net/protocols/handshake",
    "crates/net/protocols/headers",
    "crates/net/protocols/hive",
    "crates/net/protocols/pricing",
    "crates/net/protocols/pingpong",
    "crates/net/protocols/pseudosettle",
    "crates/net/protocols/pushsync",
    "crates/net/protocols/retrieval",
    "crates/net/protocols/swap",

    # Node
    "crates/node/types",
    "crates/node/api",
    "crates/node/core",
    "crates/node/builder",
    "crates/node/commands",

    # Swarm
    "crates/swarm/primitives",
    "crates/swarm/identity",
    "crates/swarm/peer",
    "crates/swarm/api",
    "crates/swarm/spec",
    "crates/swarm/forks",
    "crates/swarm/builder",
    "crates/swarm/core",
    "crates/swarm/node",
    "crates/swarm/rpc",

    # Client (libp2p boundary)
    "crates/swarm/client",
    "crates/swarm/topology",
    "crates/swarm/kademlia",
    "crates/swarm/peermanager",
    "crates/swarm/bandwidth/core",
    "crates/swarm/bandwidth/chequebook",
    "crates/swarm/bandwidth/pseudosettle",
    "crates/swarm/bandwidth/swap",

    # Storer (full node storage)
    "crates/swarm/storer",

    # RPC
    "crates/rpc/core",
    "crates/rpc/server",

    # Data
    # "crates/file",
    # "crates/manifest",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.unreachable_pub = "warn"

[workspace.dependencies]
## nectar
nectar-contracts = { path = "../nectar/crates/contracts" }
nectar-primitives = { path = "../nectar/crates/primitives" }
nectar-swarms = { path = "../nectar/crates/swarms" }

digest = "0.10"

## vertex
# primitives
vertex-swarm-forks = { path = "crates/swarm/forks" }
vertex-swarm-primitives = { path = "crates/swarm/primitives" }

# peer identity (libp2p boundary)
vertex-swarm-peer = { path = "crates/swarm/peer" }

# network
vertex-net-codec = { path = "crates/net/codec" }
vertex-net-handshake = { path = "crates/net/protocols/handshake" }
vertex-net-headers = { path = "crates/net/protocols/headers" }
vertex-net-hive = { path = "crates/net/protocols/hive" }
vertex-net-pricing = { path = "crates/net/protocols/pricing" }
vertex-net-pseudosettle = { path = "crates/net/protocols/pseudosettle" }
vertex-net-pingpong = { path = "crates/net/protocols/pingpong" }
vertex-net-pushsync = { path = "crates/net/protocols/pushsync" }
vertex-net-retrieval = { path = "crates/net/protocols/retrieval" }
vertex-net-swap = { path = "crates/net/protocols/swap" }

# node
vertex-node-types = { path = "crates/node/types" }
vertex-node-api = { path = "crates/node/api" }
vertex-node-core = { path = "crates/node/core" }
vertex-node-builder = { path = "crates/node/builder" }
vertex-node-commands = { path = "crates/node/commands" }

# metrics
vertex-metrics = { path = "crates/metrics" }

# tasks
vertex-tasks = { path = "crates/tasks" }

# swarm
vertex-swarm-identity = { path = "crates/swarm/identity" }
vertex-storage = { path = "crates/storage" }
vertex-swarm-api = { path = "crates/swarm/api" }
vertex-swarmspec = { path = "crates/swarm/spec" }
vertex-swarm-builder = { path = "crates/swarm/builder" }
vertex-swarm-core = { path = "crates/swarm/core" }
vertex-swarm-node = { path = "crates/swarm/node" }
vertex-swarm-rpc = { path = "crates/swarm/rpc" }

# client (libp2p boundary)
vertex-swarm-client = { path = "crates/swarm/client" }

# topology (in swarm/)
vertex-swarm-topology = { path = "crates/swarm/topology" }
vertex-swarm-kademlia = { path = "crates/swarm/kademlia" }
vertex-swarm-peermanager = { path = "crates/swarm/peermanager" }

# bandwidth (in swarm/)
vertex-swarm-bandwidth = { path = "crates/swarm/bandwidth/core" }
vertex-swarm-bandwidth-chequebook = { path = "crates/swarm/bandwidth/chequebook" }
vertex-swarm-bandwidth-pseudosettle = { path = "crates/swarm/bandwidth/pseudosettle" }
vertex-swarm-bandwidth-swap = { path = "crates/swarm/bandwidth/swap" }

# storer (full node storage)
vertex-swarm-storer = { path = "crates/swarm/storer" }

# rpc
vertex-rpc-core = { path = "crates/rpc/core" }
vertex-rpc-server = { path = "crates/rpc/server" }

## alloy
alloy-eip2124 = { version = "0.2", default-features = false }
alloy-primitives = { version = "1.1", default-features = false }
alloy-signer = { version = "1.0" }
alloy-signer-local = { version = "1.0", features = ["eip712", "keystore"] }
alloy-sol-types = { version = "1.5" }
alloy-chains = { version = "0.2", default-features = false }

## tracing & telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
    "time",
] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }

## p2p
libp2p = { version = "0.55.0", features = [
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "dns",
    "macros",
    "ecdsa",
    "identify",
    "upnp",
    "autonat",
    "ping",
] }
quick-protobuf = "0.8"
quick-protobuf-codec = "0.3.1"
asynchronous-codec = "0.7.0"
libp2p-swarm = "0.46.0"
libp2p-swarm-test = "0.5.0"
quickcheck = "1.0.3"
pb-rs = "0.10"
walkdir = "2.5.0"

## tokio
tokio = { version = "1", default-features = false }
tokio-stream = "0.1"

## grpc
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

## async
futures = "0.3"
futures-util = "0.3"

## concurrency
rayon = "1.10"
thread_local = "1.1"

## misc testing
arbitrary = "1.4"
assert_matches = "1.5.0"
criterion = { package = "codspeed-criterion-compat", version = "2.10.1" }
# pprof = "0.14"
proptest = "1.6"
proptest-arbitrary-interop = "0.1"
proptest-derive = "0.5"
# test-fuzz = "7"

# metrics
metrics = "0.24"

# caching
lru = "0.16"
web-time = "1.1"

# networking
netdev = "0.40"
ipnet = "2.11"

# misc
anyhow = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
byteorder = { version = "1.5", default-features = false }
auto_impl = "1"
bytes = { version = "1.10", default-features = false }
clap = "4"
derive_more = { version = "2", default-features = false, features = ["full"] }
dyn-clone = "1.0"
eyre = "0.6"
color-eyre = "0.6"
hex = "0.4"
generic-array = "0.14"
once_cell = { version = "1.21", default-features = false, features = [
    "critical-section",
] }
critical-section = { version = "1.2", features = ["std"] }
rand = "0.9"
rand_08 = { package = "rand", version = "0.8" }
rustc-hash = { version = "2.1", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
vergen-gitcl = "1"
