[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Nexum Contributors"]
license = "AGPL-3.0-or-later"
homepage = "https://nxm-rs.github.io/vertex"
repository = "https://nxm-rs.github.io/vertex"

[workspace]
members = [
    "bin/vertex",

    # Metrics (lightweight leaf crate: guards, macros, labels)
    "crates/metrics",

    # Observability (logging, tracing, metrics infrastructure)
    "crates/observability",

    # Tasks
    "crates/tasks",

    # Network (protocol-agnostic utilities)
    "crates/net/dnsaddr",
    "crates/net/local",
    "crates/net/peer/backoff",
    "crates/net/peer/store",
    "crates/net/peer/score",
    "crates/net/peer/registry",
    "crates/net/dialer",
    "crates/net/codec",
    "crates/net/ratelimiter",
    "crates/net/utils",

    # Swarm Network Protocols (crates/swarm/net/)
    "crates/swarm/net/proto",
    "crates/swarm/net/handler-core",
    "crates/swarm/net/handshake",
    "crates/swarm/net/headers",
    "crates/swarm/net/hive",
    "crates/swarm/net/pingpong",
    "crates/swarm/net/identify",
    "crates/swarm/net/credit",
    "crates/swarm/net/pseudosettle",
    "crates/swarm/net/pushsync",
    "crates/swarm/net/retrieval",
    # "crates/swarm/net/swap",  # disabled: depends on serde_json

    # Node
    "crates/node/api",
    "crates/node/core",
    "crates/node/builder",
    "crates/node/commands",

    # Swarm
    "crates/swarm/primitives",
    "crates/swarm/identity",
    "crates/swarm/peers/peer",
    "crates/swarm/api",
    "crates/swarm/spec",
    "crates/swarm/forks",
    "crates/swarm/builder",
    "crates/swarm/rpc",
    "crates/swarm/test-utils",

    # Node (libp2p boundary)
    "crates/swarm/node",
    "crates/swarm/topology",
    "crates/swarm/peers/peer-manager",
    "crates/swarm/peers/peer-score",
    "crates/swarm/bandwidth/core",
    # "crates/swarm/bandwidth/chequebook",  # disabled: depends on serde_json
    "crates/swarm/bandwidth/pricing",
    "crates/swarm/bandwidth/pseudosettle",
    # "crates/swarm/bandwidth/swap",  # disabled: depends on serde_json

    # Storage
    "crates/storage",
    "crates/storage/redb",

    # Local store (local chunk storage configuration)
    "crates/swarm/localstore",

    # Redistribution (storage incentives)
    "crates/swarm/redistribution",

    # Storer (full node storage)
    "crates/swarm/storer",

    # RPC
    "crates/rpc/core",
    "crates/rpc/server",

    # Data
    # "crates/file",
    # "crates/manifest",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"

[workspace.dependencies]
## nectar
nectar-contracts = { git = "https://github.com/nxm-rs/nectar" }
nectar-primitives = { git = "https://github.com/nxm-rs/nectar" }
nectar-swarms = { git = "https://github.com/nxm-rs/nectar" }

digest = "0.10"

## vertex
# primitives
vertex-swarm-forks = { path = "crates/swarm/forks" }
vertex-swarm-primitives = { path = "crates/swarm/primitives" }

# peer identity (libp2p boundary)
vertex-swarm-peer = { path = "crates/swarm/peers/peer" }

# network
vertex-net-dnsaddr = { path = "crates/net/dnsaddr" }
vertex-net-local = { path = "crates/net/local" }
vertex-net-peer-backoff = { path = "crates/net/peer/backoff" }
vertex-net-peer-store = { path = "crates/net/peer/store" }
vertex-net-peer-score = { path = "crates/net/peer/score" }
vertex-net-peer-registry = { path = "crates/net/peer/registry" }
vertex-net-dialer = { path = "crates/net/dialer" }
vertex-net-codec = { path = "crates/net/codec" }
vertex-net-ratelimiter = { path = "crates/net/ratelimiter" }
vertex-net-utils = { path = "crates/net/utils" }

# Swarm network protocols (crates/swarm/net/)
vertex-swarm-net-proto = { path = "crates/swarm/net/proto" }
vertex-swarm-net-handler-core = { path = "crates/swarm/net/handler-core" }
vertex-swarm-net-handshake = { path = "crates/swarm/net/handshake" }
vertex-swarm-net-headers = { path = "crates/swarm/net/headers" }
vertex-swarm-net-hive = { path = "crates/swarm/net/hive" }
vertex-swarm-net-identify = { path = "crates/swarm/net/identify" }
vertex-swarm-net-credit = { path = "crates/swarm/net/credit" }
vertex-swarm-net-pseudosettle = { path = "crates/swarm/net/pseudosettle" }
vertex-swarm-net-pingpong = { path = "crates/swarm/net/pingpong" }
vertex-swarm-net-pushsync = { path = "crates/swarm/net/pushsync" }
vertex-swarm-net-retrieval = { path = "crates/swarm/net/retrieval" }
# vertex-swarm-net-swap = { path = "crates/swarm/net/swap" }  # disabled

# node
vertex-node-api = { path = "crates/node/api" }
vertex-node-core = { path = "crates/node/core" }
vertex-node-builder = { path = "crates/node/builder" }
vertex-node-commands = { path = "crates/node/commands" }

# metrics (leaf crate)
vertex-metrics = { path = "crates/metrics" }

# observability
vertex-observability = { path = "crates/observability" }

# tasks
vertex-tasks = { path = "crates/tasks" }

# swarm
vertex-swarm-identity = { path = "crates/swarm/identity" }
vertex-storage = { path = "crates/storage" }
vertex-storage-redb = { path = "crates/storage/redb" }
vertex-swarm-api = { path = "crates/swarm/api" }
vertex-swarm-spec = { path = "crates/swarm/spec" }
vertex-swarm-builder = { path = "crates/swarm/builder" }
vertex-swarm-rpc = { path = "crates/swarm/rpc" }
vertex-swarm-test-utils = { path = "crates/swarm/test-utils" }

# node (libp2p boundary)
vertex-swarm-node = { path = "crates/swarm/node" }

# topology (in swarm/)
vertex-swarm-topology = { path = "crates/swarm/topology" }
vertex-swarm-peer-manager = { path = "crates/swarm/peers/peer-manager" }
vertex-swarm-peer-score = { path = "crates/swarm/peers/peer-score" }

# bandwidth (in swarm/)
vertex-swarm-bandwidth = { path = "crates/swarm/bandwidth/core" }
# vertex-swarm-bandwidth-chequebook = { path = "crates/swarm/bandwidth/chequebook" }  # disabled
vertex-swarm-bandwidth-pricing = { path = "crates/swarm/bandwidth/pricing" }
vertex-swarm-bandwidth-pseudosettle = { path = "crates/swarm/bandwidth/pseudosettle" }
# vertex-swarm-bandwidth-swap = { path = "crates/swarm/bandwidth/swap" }  # disabled

# localstore (local chunk storage configuration)
vertex-swarm-localstore = { path = "crates/swarm/localstore" }

# redistribution (storage incentives)
vertex-swarm-redistribution = { path = "crates/swarm/redistribution" }

# storer (full node storage)
vertex-swarm-storer = { path = "crates/swarm/storer" }

# rpc
vertex-rpc-core = { path = "crates/rpc/core" }
vertex-rpc-server = { path = "crates/rpc/server" }

## alloy
alloy-eip2124 = { version = "0.2", default-features = false }
alloy-primitives = { version = "1.1", default-features = false }
alloy-signer = { version = "1.0" }
alloy-signer-local = { version = "1.0", features = ["eip712", "keystore"] }
alloy-sol-types = { version = "1.5" }
alloy-chains = { version = "0.2", default-features = false }

## tracing & telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
    "time",
] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest"] }
opentelemetry-appender-tracing = { version = "0.31", features = ["experimental_use_tracing_span_context"] }

## p2p
libp2p = { version = "0.56.0", features = [
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "dns",
    "macros",
    "ecdsa",
    "identify",
    "upnp",
    "autonat",
    "ping",
] }
quick-protobuf = "0.8"
quick-protobuf-codec = "0.3.1"
asynchronous-codec = "0.7.0"
libp2p-swarm = "0.47.1"
libp2p-swarm-test = "0.6.0"
quickcheck = "1.0.3"
pb-rs = "0.10"
walkdir = "2.5.0"

## tokio
tokio = { version = "1", default-features = false }
tokio-stream = "0.1"

## grpc
tonic = "0.12"
tonic-build = "0.12"
tonic-reflection = "0.12"
prost = "0.13"

## async
futures = "0.3"
futures-util = "0.3"

## atomics
portable-atomic = { version = "1", features = ["float", "serde"] }

## concurrency
rayon = "1.10"
thread_local = "1.1"

## profiling (optional)
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"] }
console-subscriber = "0.5"
tikv-jemallocator = { version = "0.6", features = [] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
tikv-jemalloc-sys = { version = "0.6", features = [] }

## misc testing
arbitrary = "1.4"
assert_matches = "1.5.0"
criterion = { package = "codspeed-criterion-compat", version = "2.10.1" }
proptest = "1.6"
proptest-arbitrary-interop = "0.1"
proptest-derive = "0.5"

# metrics
metrics = "0.24"

# caching
hashlink = "0.10"
web-time = "1.1"

# networking
if-watch = { version = "3.2", features = ["tokio"] }
ipnet = "2.11"
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }

# misc
anyhow = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
byteorder = { version = "1.5", default-features = false }
auto_impl = "1"
bytes = { version = "1.10", default-features = false }
clap = "4"
derive_more = { version = "2", default-features = false, features = ["full"] }
dyn-clone = "1.0"
eyre = "0.6"
color-eyre = "0.6"
hex = "0.4"
generic-array = "0.14"
paste = "1"
once_cell = { version = "1.21", default-features = false, features = [
    "critical-section",
] }
critical-section = { version = "1.2", features = ["std"] }
rand = "0.9"
rand_08 = { package = "rand", version = "0.8" }
rustc-hash = { version = "2.1", default-features = false }
serde = { version = "1.0", default-features = false }
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"
toml = "0.8"
serde_with = { version = "3", default-features = false, features = ["macros"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
vergen-gitcl = "9"

# concurrent data structures
dashmap = "6.1"
scopeguard = "1.2"

# Release profile with frame pointers for CPU profiling
[profile.release]
debug = 1  # Include debug symbols for better stack traces
strip = false  # Don't strip symbols

# Profile for profiling (release + frame pointers)
[profile.profiling]
inherits = "release"
debug = 2  # Full debug info for profiling
