[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Nexum Contributors"]
license = "AGPL-3.0-or-later"
homepage = "https://nxm-rs.github.io/vertex"
repository = "https://nxm-rs.github.io/vertex"

[workspace]
members = [
    "bin/vertex",

    # Metrics (lightweight leaf crate: guards, macros, labels)
    "crates/metrics",

    # Observability (logging, tracing, metrics infrastructure)
    "crates/observability",

    # Tasks
    "crates/tasks",

    # Util (cfg-gated foundation utilities: time and randomness)
    "crates/util/runtime",

    # Network (protocol-agnostic utilities)
    "crates/net/dnsaddr",
    "crates/net/dnsaddr-doh",
    "crates/net/local",
    "crates/net/peer/backoff",
    "crates/net/peer/store",
    "crates/net/peer/score",
    "crates/net/peer/registry",
    "crates/net/dialer",
    "crates/net/codec",
    "crates/net/ratelimiter",
    "crates/net/utils",

    # Swarm Network Protocols (crates/swarm/net/)
    "crates/swarm/net/proto",
    "crates/swarm/net/handler-core",
    "crates/swarm/net/handshake",
    "crates/swarm/net/headers",
    "crates/swarm/net/hive",
    "crates/swarm/net/identify",
    "crates/swarm/net/pricing",
    "crates/swarm/net/pseudosettle",
    "crates/swarm/net/pushsync",
    "crates/swarm/net/retrieval",
    "crates/swarm/net/swap",

    # Node
    "crates/node/api",
    "crates/node/core",
    "crates/node/builder",
    "crates/node/commands",

    # Swarm
    "crates/swarm/primitives",
    "crates/swarm/identity",
    "crates/swarm/peers/peer",
    "crates/swarm/api",
    "crates/swarm/spec",
    "crates/swarm/forks",
    "crates/swarm/builder",
    "crates/swarm/rpc",
    "crates/swarm/stream",
    "crates/swarm/test-utils",

    # Node (libp2p boundary)
    "crates/swarm/client-protocol",
    "crates/swarm/client-behaviour",
    "crates/swarm/node",
    "crates/swarm/topology",
    "crates/swarm/peers/peer-manager",
    "crates/swarm/peers/peer-score",
    "crates/swarm/accounting/core",
    "crates/swarm/accounting/chequebook",
    "crates/swarm/accounting/pricing",
    "crates/swarm/accounting/pseudosettle",
    "crates/swarm/accounting/swap",

    # Storage
    "crates/store",
    "crates/storage",
    "crates/storage/redb",

    # Local store (local chunk storage configuration)
    "crates/swarm/localstore",

    # Redistribution (storage incentives)
    "crates/swarm/redistribution",

    # Storer (chunk storage and staking)
    "crates/swarm/storer",

    # Postage (batch store + on-chain event ingest seam)
    "crates/swarm/postage",

    # RPC
    "crates/rpc/core",
    "crates/rpc/server",

    # Chain (Ethereum RPC access)
    "crates/chain",
    "crates/chain/index",

    # FFI (native embedding surface)
    "crates/ffi",

    # Data
    # "crates/file",
    # "crates/manifest",
]

# Wasm-only crates that must never enter the native default workspace build.
# `bin/swarm-demo` is a browser `cdylib` that depends on the wasm-only client
# launch path and never compiles for native, so it is excluded here and built
# with the Trunk pipeline documented in its README.
exclude = [
    "bin/swarm-demo",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"

[workspace.dependencies]
## nectar
# Track nectar via a single shared git source so the workspace resolves one
# copy of shared nectar types; Cargo.lock pins the exact commit.
#
# Tracks nectar `main`, which now carries the synchronous
# BatchStore/StoreValidator/SnapshotStore conversion (nectar #103).
nectar-contracts = { git = "https://github.com/nxm-rs/nectar", branch = "main" }
nectar-postage = { git = "https://github.com/nxm-rs/nectar", branch = "main" }
nectar-primitives = { git = "https://github.com/nxm-rs/nectar", branch = "main" }
nectar-swarms = { git = "https://github.com/nxm-rs/nectar", branch = "main" }

digest = "0.10"

## vertex
# primitives
vertex-swarm-forks = { path = "crates/swarm/forks" }
vertex-swarm-primitives = { path = "crates/swarm/primitives" }

# peer identity (libp2p boundary)
vertex-swarm-peer = { path = "crates/swarm/peers/peer" }

# network
vertex-net-dnsaddr = { path = "crates/net/dnsaddr" }
vertex-net-dnsaddr-doh = { path = "crates/net/dnsaddr-doh" }
vertex-net-local = { path = "crates/net/local" }
vertex-net-peer-backoff = { path = "crates/net/peer/backoff" }
vertex-net-peer-store = { path = "crates/net/peer/store" }
vertex-net-peer-score = { path = "crates/net/peer/score" }
vertex-net-peer-registry = { path = "crates/net/peer/registry" }
vertex-net-dialer = { path = "crates/net/dialer" }
vertex-net-codec = { path = "crates/net/codec" }
vertex-net-ratelimiter = { path = "crates/net/ratelimiter" }
vertex-net-utils = { path = "crates/net/utils" }

# Swarm network protocols (crates/swarm/net/)
vertex-swarm-net-proto = { path = "crates/swarm/net/proto" }
vertex-swarm-net-handler-core = { path = "crates/swarm/net/handler-core" }
vertex-swarm-net-handshake = { path = "crates/swarm/net/handshake" }
vertex-swarm-net-headers = { path = "crates/swarm/net/headers" }
vertex-swarm-net-hive = { path = "crates/swarm/net/hive" }
vertex-swarm-net-identify = { path = "crates/swarm/net/identify" }
vertex-swarm-net-pricing = { path = "crates/swarm/net/pricing" }
vertex-swarm-net-pseudosettle = { path = "crates/swarm/net/pseudosettle" }
vertex-swarm-net-pushsync = { path = "crates/swarm/net/pushsync" }
vertex-swarm-net-retrieval = { path = "crates/swarm/net/retrieval" }
vertex-swarm-net-swap = { path = "crates/swarm/net/swap" }

# node
vertex-node-api = { path = "crates/node/api" }
vertex-node-core = { path = "crates/node/core" }
vertex-node-builder = { path = "crates/node/builder" }
vertex-node-commands = { path = "crates/node/commands" }

# metrics (leaf crate)
vertex-metrics = { path = "crates/metrics" }

# observability
# The crate defaults to the light surface (no features): the platform-neutral
# metric primitives and the dependency-free config structs. The wasm cone
# (topology and the `/swarm/...` wire crates) and embedders get this for free.
# Native consumers opt into the minimal slice they use (`subscriber`, `otlp`,
# `prometheus`, `http-server`, or the `host` umbrella).
vertex-observability = { path = "crates/observability" }

# tasks
vertex-tasks = { path = "crates/tasks" }

# util (cfg-gated time and randomness foundation)
vertex-util-runtime = { path = "crates/util/runtime" }

# swarm
vertex-swarm-identity = { path = "crates/swarm/identity" }
vertex-store = { path = "crates/store" }
vertex-storage = { path = "crates/storage" }
vertex-storage-redb = { path = "crates/storage/redb" }
vertex-swarm-api = { path = "crates/swarm/api" }
vertex-swarm-spec = { path = "crates/swarm/spec" }
vertex-swarm-builder = { path = "crates/swarm/builder" }
vertex-swarm-rpc = { path = "crates/swarm/rpc" }
vertex-swarm-stream = { path = "crates/swarm/stream" }
vertex-swarm-test-utils = { path = "crates/swarm/test-utils" }

# node (libp2p boundary)
vertex-swarm-client-protocol = { path = "crates/swarm/client-protocol" }
vertex-swarm-client-behaviour = { path = "crates/swarm/client-behaviour" }
vertex-swarm-node = { path = "crates/swarm/node" }

# topology (in swarm/)
vertex-swarm-topology = { path = "crates/swarm/topology" }
vertex-swarm-peer-manager = { path = "crates/swarm/peers/peer-manager" }
vertex-swarm-peer-score = { path = "crates/swarm/peers/peer-score" }

# accounting (in swarm/)
vertex-swarm-accounting = { path = "crates/swarm/accounting/core" }
vertex-swarm-accounting-chequebook = { path = "crates/swarm/accounting/chequebook" }
vertex-swarm-accounting-pricing = { path = "crates/swarm/accounting/pricing" }
vertex-swarm-accounting-pseudosettle = { path = "crates/swarm/accounting/pseudosettle" }
vertex-swarm-accounting-swap = { path = "crates/swarm/accounting/swap" }

# localstore (local chunk storage configuration)
vertex-swarm-localstore = { path = "crates/swarm/localstore" }

# redistribution (storage incentives)
vertex-swarm-redistribution = { path = "crates/swarm/redistribution" }

# storer (chunk storage and staking)
vertex-swarm-storer = { path = "crates/swarm/storer" }

# postage (batch store + on-chain event ingest seam)
vertex-swarm-postage = { path = "crates/swarm/postage" }

# rpc
vertex-rpc-core = { path = "crates/rpc/core" }
vertex-rpc-server = { path = "crates/rpc/server" }

# chain (Ethereum RPC access)
vertex-chain = { path = "crates/chain" }
vertex-chain-index = { path = "crates/chain/index" }

# ffi (native embedding surface)
vertex-ffi = { path = "crates/ffi" }

## alloy
alloy-eip2124 = { version = "0.2", default-features = false }
alloy-primitives = { version = "1.6", default-features = false }
alloy-network = { version = "2.0", default-features = false }
alloy-provider = { version = "2.0", default-features = false }
alloy-contract = { version = "2.0", default-features = false }
alloy-rpc-types-eth = { version = "2.0", default-features = false }
alloy-json-rpc = { version = "2.0", default-features = false }
alloy-signer = { version = "2.0" }
# The `keystore` feature pulls `eth-keystore`, which does not build for
# wasm32. It is enabled per-target (native-only) by the sole keystore consumer,
# `vertex-swarm-identity`, so the rest of the workspace can compile for wasm.
alloy-signer-local = { version = "2.0", features = ["eip712"] }
alloy-sol-types = { version = "1.6" }
alloy-chains = { version = "0.2", default-features = false }

## tracing & telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
    "time",
] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest"] }
opentelemetry-appender-tracing = { version = "0.31", features = ["experimental_use_tracing_span_context"] }

## p2p
# Pinned to the nxm-rs rust-libp2p fork, branched from upstream rev
# 3e72d4c071d5ec8815d2f6f7ee3602600ff51798 (master, for libp2p-dns 0.45.0 against
# hickory 0.26.1, RUSTSEC-2026-0119 / RUSTSEC-2026-0118). The fork carries a single
# fix on top: `libp2p-websocket-websys` no longer blocks `poll_flush` on the browser
# WebSocket `bufferedAmount` draining to zero, which stalled the wasm client mid
# handshake and tore the connection down with `BrokenPipe`. Revisit when the fix is
# upstreamed and libp2p 0.57 is released.
libp2p = { git = "https://github.com/nxm-rs/rust-libp2p", rev = "6454fdf3450f91fdbb6e3306daa7a9a4e633c133", features = [
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "dns",
    "macros",
    "ecdsa",
    "identify",
    "upnp",
    "autonat",
    "mdns",
    "ping",
] }
quick-protobuf = "0.8"
quick-protobuf-codec = "0.3.1"
asynchronous-codec = "0.7.0"
libp2p-swarm = { git = "https://github.com/nxm-rs/rust-libp2p", rev = "6454fdf3450f91fdbb6e3306daa7a9a4e633c133" }
libp2p-swarm-test = { git = "https://github.com/nxm-rs/rust-libp2p", rev = "6454fdf3450f91fdbb6e3306daa7a9a4e633c133" }
# Browser websocket transport for the wasm client. Dials the bee AutoTLS
# `/tls/sni/<host>/ws` form; the browser performs TLS and SNI natively. Pinned to
# the nxm-rs fork for the `poll_flush` browser WebSocket flush fix (see the `libp2p`
# entry above).
libp2p-websocket-websys = { git = "https://github.com/nxm-rs/rust-libp2p", rev = "6454fdf3450f91fdbb6e3306daa7a9a4e633c133" }
quickcheck = "1.0.3"
pb-rs = "0.10"
walkdir = "2.5.0"

## tokio
tokio = { version = "1", default-features = false }
tokio-stream = "0.1"

## grpc
tonic = "0.12"
tonic-build = "0.12"
tonic-reflection = "0.12"
prost = "0.13"

## async
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
wasm-bindgen-futures = "0.4"

## wasm browser HTTP (fetch) and test harness
gloo-net = { version = "0.6", default-features = false, features = ["http"] }
wasm-bindgen-test = "0.3"

## wasm-bindgen surface and browser bindings (the swarm-demo app)
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
# libp2p pulls futures-timer transitively for its connection-handler delays. On
# wasm32 those delays must use the browser clock; the `wasm-bindgen` feature
# routes them through gloo-timers instead of the std clock (which panics on
# wasm32-unknown-unknown). Declared here so the node crate can turn the feature
# on for the wasm build via feature unification.
futures-timer = { version = "3", features = ["wasm-bindgen"] }

## atomics
portable-atomic = { version = "1", features = ["float", "serde"] }

## concurrency
rayon = "1.10"
thread_local = "1.1"

## profiling (optional)
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"] }
console-subscriber = "0.5"
tikv-jemallocator = { version = "0.6", features = [] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
tikv-jemalloc-sys = { version = "0.6", features = [] }

## misc testing
arbitrary = "1.4"
assert_matches = "1.5.0"
criterion = { package = "codspeed-criterion-compat", version = "2.10.1" }
proptest = "1.6"
proptest-arbitrary-interop = "0.1"
proptest-derive = "0.5"

# metrics
metrics = "0.24"

# caching
hashlink = "0.10"
web-time = "1.1"

# networking
if-watch = { version = "3.2", features = ["tokio"] }
ipnet = "2.11"
hickory-resolver = { version = "0.26", features = ["tokio", "system-config"] }

# misc
anyhow = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
byteorder = { version = "1.5", default-features = false }
auto_impl = "1"
bytes = { version = "1.10", default-features = false }
clap = "4"
derive_more = { version = "2", default-features = false, features = ["full"] }
dyn-clone = "1.0"
eyre = "0.6"
color-eyre = "0.6"
hex = "0.4"
generic-array = "0.14"
# Pinned to the 0.2 line so the wasm `js` backend feature matches the version the
# secp256k1 crypto stack resolves to.
getrandom = { version = "0.2", default-features = false }
# The 0.4 line is what alloy-primitives resolves to; wasm builds select its
# browser backend (`wasm_js` feature plus the `getrandom_backend` cfg set in
# .cargo/config.toml for the wasm32 target).
getrandom_04 = { package = "getrandom", version = "0.4", default-features = false }
# The 0.3 line is what rand 0.9's rand_core resolves to. The wasm cone selects
# its browser backend with the `wasm_js` feature plus the `getrandom_backend`
# cfg set in .cargo/config.toml for the wasm32 target.
getrandom_03 = { package = "getrandom", version = "0.3", default-features = false }
paste = "1"
once_cell = { version = "1.21", default-features = false, features = [
    "critical-section",
] }
critical-section = { version = "1.2", features = ["std"] }
rand = "0.9"
rand_08 = { package = "rand", version = "0.8" }
# Matches the rand 0.9 stack (rand_core 0.9, getrandom 0.3) for seeded CSPRNGs.
rand_chacha = "0.9"
rustc-hash = { version = "2.1", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = [
    "alloc",
    "raw_value",
] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"
toml = "0.8"
serde_with = { version = "3", default-features = false, features = ["macros", "base64"] }
strum = { version = "0.28", features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
vergen-gitcl = "9"

# concurrent data structures
dashmap = "6.1"
scopeguard = "1.2"

# Release profile with frame pointers for CPU profiling
[profile.release]
debug = 1  # Include debug symbols for better stack traces
strip = false  # Don't strip symbols

# Profile for profiling (release + frame pointers)
[profile.profiling]
inherits = "release"
debug = 2  # Full debug info for profiling
