[package]
name = "beers-cli-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# beers
beers-tasks.workspace = true

# async
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

# misc
tracing.workspace = true

[lints]
workspace = true
