[package]
name = "vertex-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Native FFI surface for embedding a Vertex Swarm client"

[lints]
workspace = true

# The C ABI lives in the cdylib; the rlib lets the workspace and tests link the
# same API as a normal Rust dependency.
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable on-chain SWAP settlement for the embedded client. Forwards to the
# builder's chain feature; native-only and off by default so the FFI client
# stays chain-free unless the host opts in.
chain = ["vertex-swarm-builder/chain"]

[dependencies]
# vertex - node infrastructure and the client builder
vertex-swarm-builder.workspace = true
vertex-swarm-api.workspace = true
vertex-swarm-identity.workspace = true
vertex-swarm-primitives.workspace = true
vertex-swarm-spec.workspace = true
vertex-swarm-node.workspace = true
vertex-node-api.workspace = true
vertex-tasks.workspace = true

# nectar primitives (chunk and stamp types reconstructed at the boundary)
nectar-postage.workspace = true

# signing for client identity construction
alloy-primitives.workspace = true
alloy-signer-local.workspace = true

# bridge codegen runtime
flutter_rust_bridge.workspace = true

thiserror.workspace = true
strum.workspace = true

# Native runtime owned by the client handle. The FFI cdylib is native-only, so
# the multi-thread tokio runtime is unconditional here.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
