[package]
name = "vertex-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Native FFI surface for embedding a Vertex Swarm client"

[lints]
workspace = true

# The C ABI lives in the cdylib; the rlib lets the workspace and tests link the
# same API as a normal Rust dependency.
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable on-chain SWAP settlement for the embedded client. Forwards to the
# builder's chain feature; off by default so the FFI client stays chain-free
# unless the host opts in.
chain = ["vertex-swarm-builder/chain"]

[dependencies]
# vertex - node infrastructure and the client builder
vertex-swarm-builder.workspace = true
vertex-swarm-api.workspace = true
vertex-swarm-identity.workspace = true
vertex-swarm-primitives.workspace = true
vertex-swarm-spec.workspace = true
vertex-swarm-node.workspace = true
vertex-swarm-stream.workspace = true
vertex-node-api.workspace = true
vertex-tasks.workspace = true

# nectar primitives (chunk and stamp types reconstructed at the boundary)
nectar-postage.workspace = true

# signing for client identity construction
alloy-primitives.workspace = true
alloy-signer-local.workspace = true

# bridge codegen runtime. The codegen's polisher pins this to its own version
# (and rewrites it on mismatch), so it is a crate-local exact pin rather than a
# workspace dependency. The pubspec pin in bindings/dart follows the same
# version.
flutter_rust_bridge = "=2.12.0"

thiserror.workspace = true
strum.workspace = true

# Stream combinators (`StreamExt`) for pumping the bounded download/upload
# pipelines into the host's StreamSink at the boundary.
futures.workspace = true

# Logging surface for embedding hosts. The host installs a subscriber that
# forwards events to a Dart stream. A custom Layer (not VertexTracer) lives in
# `api::logging` so the event extraction targets the flat `LogLine` shape; that
# keeps the FFI cone free of the observability server stack (no prometheus, no
# OTLP appender) which the `just check-cone` guard asserts.
tracing.workspace = true

# Metrics surface for embedding hosts. A custom snapshot recorder (not the
# Prometheus recorder) lives in `api::metrics`, built on metrics-util's
# registry with bounded per-series storage; only the registry slice is pulled
# so the FFI cone stays free of the exporter stack.
metrics.workspace = true

# Native runtime owned by the client handle plus the tracing subscriber. The FFI
# cdylib is native-only, so both are unconditional here; the wasm cone never
# pulls them in.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }
metrics-util = { version = "0.20", default-features = false, features = ["registry"] }
